@@ -1,4 +1,11 @@
-Thy Jul 15 09:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+Mon Jul 26 09:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* SQLClient.h: Add -transaction method and SQLTransaction class
+	* SQLClient.m: Implement -transaction method and SQLTransaction class
+	to provide a simple convenient mechanism for executing a sequence
+	of statements as a single transaction.
+
+Thu Jul 15 09:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* WebServer.m: ([_didRead:]) more informative logging upon reading
 	an unexpected end-of-file
